update homepage and add media centered object

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -4,3 +4,17 @@
 // Bootstrap Overrides
 .dropdown-menu
   min-width: 400px
+
+// Media Objects
+.media-centered
+  position: relative
+  .title-block
+    text-transform: uppercase
+    position: absolute
+    text-align: center
+    top: 20%
+    width: 100%
+    .title-main
+      background-color: white
+      margin: 0px 10%
+      padding: 5px 0px
