update media centered

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -8,6 +8,9 @@
 // Media Objects
 .media-centered
   position: relative
+  a
+    color: white
+    font-size: 18px
   .title-block
     text-transform: uppercase
     position: absolute
@@ -15,6 +18,8 @@
     top: 20%
     width: 100%
     .title-main
-      background-color: white
-      margin: 0px 10%
+      background-color: rgba(255,255,255,.8)
+      margin: 0px 10% 3%
       padding: 5px 0px
+      color: black
+      text-shadow: none
