update media centered

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -23,3 +23,8 @@
       padding: 5px 0px
       color: black
       text-shadow: none
+
+.media-centered-medium
+  width: 100%
+  min-height: 210px
+  margin-bottom: 20px
