--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -88,6 +88,8 @@
                 %li
                   = link_to 'Sign in', sign_in_path
 
+    .container-fluid#container-hero
+      = yield :hero
 
     .container#main-container
       - flash.each do |name, msg|
