--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -1,3 +1,16 @@
+// Mixins
+=boxsizing
+  box-sizing: border-box
+  -moz-box-sizing: border-box
+  -webkit-box-sizing: border-box
+  -o-box-sizing: border-box
+
+=shadow
+  box-shadow: 0px 0px 8px #888888
+  -moz-box-box-shadow: 0px 0px 8px #888888
+  -webkit-box-shadow: 0px 0px 8px #888888
+  -o-box-shadow: 0px 0px 8px #888888
+
 #main-container
   margin-top: 60px
 
@@ -28,3 +41,36 @@
   width: 100%
   min-height: 210px
   margin-bottom: 20px
+
+.media-hero
+  position: relative
+  max-height: 600px
+  img
+    width: 100%
+  .media-block
+    position: absolute
+    top: 200px
+    width: inherit
+    padding: 100px
+    @include boxsizing
+    .title-main
+      text-transform: uppercase
+      h2
+        background-color: rgba(255,255,255,.8)
+        padding: 5px 20px
+        color: black
+        text-shadow: none
+    .media-body
+      color: white
+
+// Unique Styles
+#container-hero
+  margin: 0px
+  padding: 0px
+  margin-top: -60px
+  h1
+    position: absolute
+    z-index: 999
+    top: 50px
+    padding: 100px
+    font-size: 60px
