--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -30,6 +30,7 @@
     text-align: center
     top: 20%
     width: 100%
+    text-shadow: 0px 1px rgba(0,0,0,.6)
     .title-main
       background-color: rgba(255,255,255,.8)
       margin: 0px 10% 3%
@@ -44,33 +45,42 @@
 
 .media-hero
   position: relative
-  max-height: 600px
+  max-height: 718px
   img
     width: 100%
   .media-block
     position: absolute
-    top: 200px
+    top: 100px
     width: inherit
     padding: 100px
     @include boxsizing
-    .title-main
-      text-transform: uppercase
-      h2
-        background-color: rgba(255,255,255,.8)
-        padding: 5px 20px
-        color: black
-        text-shadow: none
     .media-body
-      color: white
+      background-color: rgba(255,255,255,.2)
+      text-transform: uppercase
+      padding: 50px
+      height: 200px
+
+.video-container
+  //position: relative
+  overflow: hidden
+  iframe, object, embed
+    position: absolute
+    // height: 360px
+    // width: 640px
+    height: 100%
+    min-height: 360px
+    width: 100%
+    border: none
 
 // Unique Styles
 #container-hero
   margin: 0px
   padding: 0px
   margin-top: -60px
-  h1
-    position: absolute
-    z-index: 999
-    top: 50px
-    padding: 100px
-    font-size: 60px
+
+#hero-video
+  position: absolute
+  top: 0px
+  .video-container
+    max-width: 640px
+    margin: 0 auto
