--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,4 @@
 = content_for :hero do
-  .container
-    %h1 Explore Modernist Cuisine
   .row-fluid
     .carousel.slide#hero-carousel
       .carousel-inner
@@ -8,6 +6,11 @@
           = render 'shared/media_hero', main: 'Recipe', media_image: @recipes.first.step_images.last, media_object: @recipes.first
         .item
           = render 'shared/media_hero', main: 'Recipe', media_image: @recipes.last.step_images.last, media_object: @recipes.last
+.container#hero-video
+  .row
+    .span12
+      .video-container
+        %iframe{src: youtube_url('8eV3nrNVXxo', 0) }
 
 .row
   .span12
