homepage video updates

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -12,6 +12,8 @@
       .span10.offset1
         .video-container
           %iframe{src: youtube_url('8eV3nrNVXxo', 0) }
+      .span1.offset11
+        = link_to 'x', '#'
 
 .row
   .span12
