--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,7 +3,6 @@
     %title ChefSteps
     = stylesheet_link_tag 'application', media: 'all'
     = stylesheet_link_tag 'print',  media: 'print'
-    = javascript_include_tag 'application'
     = csrf_meta_tags
     %meta{charset: 'utf-8'}
     %meta{name: 'description', content: yield(:description)}
@@ -97,3 +96,5 @@
           = msg
       = yield
       = render 'layouts/footer'
+    = render 'layouts/youtube'
+    = javascript_include_tag 'application'
