--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -220,6 +220,10 @@ body.admin_namespace
     margin-left: 30px
     width: 300px
 
+  ol
+    .nested-form-legend
+      margin-top: -10px
+
 .admin_activities.associated_ingredients
   .step-ingredients
     li
@@ -259,3 +263,5 @@ body.admin_namespace
     input
       border: none
       box-shadow: none
+
+
