add close button

--- a/app/assets/stylesheets/redesign.css.sass
+++ b/app/assets/stylesheets/redesign.css.sass
@@ -81,9 +81,10 @@
   margin-top: 40px
   max-height: 576px
   position: absolute
+  z-index: 9999
 
 #hero-video
   margin-top: 40px
   height: 576px
   .video-container 
-    display: none
+    // display: none
