--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,6 +11,9 @@
       .span10.offset1
         .video-container
           #hero-player
+      .span1
+        = link_to '#', id: 'player-close' do
+          %h3 close
 
 .row
   .span12
