updates to home page

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -71,7 +71,7 @@
     .row
       .span6.offset3
         %p
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius consectetur arcu, nec adipiscing turpis porta id. Nulla pellentesque, mauris quis commodo fringilla, quam lorem vehicula lorem, feugiat rhoncus tellus felis non nunc."
+          / = @status['text']
         %p
           = link_to 'Follow Us on Twitter', 'http://twitter.com/@chefsteps', target: 'blank'
 
